IBX-5784: CkEditor toolbar overflow fix

--- a/src/bundle/Resources/public/scss/_main-container.scss
+++ b/src/bundle/Resources/public/scss/_main-container.scss
@@ -1,4 +1,6 @@
 .ibexa-main-container {
+    $edit-container-padding: calculateRem(16px);
+
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
@@ -15,8 +17,28 @@
 
     &--edit-container {
         height: 100vh;
-        padding: calculateRem(16px);
+        padding: $edit-container-padding;
         background-color: $ibexa-color-dark;
+
+        &::before {
+            content: '';
+            height: $edit-container-padding;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            background-color: $ibexa-color-dark;
+            z-index: 2;
+        }
+
+        &::after {
+            content: '';
+            height: $edit-container-padding;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background-color: $ibexa-color-dark;
+            z-index: 2;
+        }
 
         .ibexa-main-container {
             &__side-column {
